--- a/AspEfCore.Web/appsettings.json
+++ b/AspEfCore.Web/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EFCoreDeemo;Trusted_Connection=True;"
+    "DefaultConnection": "Server=192.168.0.105;Port=3306;Database=MyEFCore;User=sun;Password=550312171"
   }
 }
